Fix mobile spacing.

--- a/wp-content/themes/ap_properties/style.css
+++ b/wp-content/themes/ap_properties/style.css
@@ -112,6 +112,16 @@ h1, h2, h3, h4, h5 {
     opacity: 1;
 }
 
+@media (max-width: 768px) {
+    .hero-text {
+        margin-top:75px;
+    }
+    .hero-form button {
+        width:100%;
+    }
+}
+
+
 /* Review Section */
 .review-section {
     background-image: url('img/review-background.jpg');
@@ -157,6 +167,22 @@ h1, h2, h3, h4, h5 {
     margin-bottom: -75px;
 }
 
+@media (max-width: 768px) {
+    .review-box {
+        margin-top:1rem;
+    }
+    .about-row {
+        margin-top:8rem;
+    }
+    .image-popout img {
+        width: 100%;
+    }
+    .shrink-row {
+        margin-bottom: 0px;
+    }
+}
+
+
 
 /* Sellers Section */
 .sell-section {
@@ -186,6 +212,16 @@ h1, h2, h3, h4, h5 {
     position:absolute;
 }
 
+@media (max-width: 768px) {
+    .just-sold-box {
+        margin-top: 100px;
+    }
+    .just-sold-box:first-child {
+        margin-top:0;
+    }
+}
+
+
 /* Icon Box Section */
 .icon-box {
     background: var(--brand-blue) !important;
@@ -205,7 +241,12 @@ h1, h2, h3, h4, h5 {
     box-shadow: 2px 2px 4px #000000;
     padding-top:.8rem;
 }
-
+@media (max-width: 768px) {
+    .icon-box {
+        margin-top: 75px;
+        width:75%;
+    }
+}
 /* Form Section */
 .form-section {
     background-image: url('img/form-background.jpg');
@@ -241,4 +282,14 @@ h1, h2, h3, h4, h5 {
 }
 .btn-brand-light {
     width:100%;
+}
+
+@media (max-width: 768px) {
+    .location-box {
+        margin-left: 0px;
+        width:75%;
+    }
+    .contact-text {
+        justify-content: center;
+    }
 }
